# iocp-server-unity-client-demo

./: .git-cliff.toml  .gitignore  CHANGELOG.md  git-cliff.toml  readme.md
.github/workflows/: release.yml
docs/diagram/: 01_Compoenent_diagram.md  02_Server_diagram.md  03_Client_diagram.md  04_Packet_Sequence_diagram.md
docs/troubleshooting/: 100명 이상 대규모 동시접속시, 유니티 클라이언트의 병목 문제.md  DummyClient와 Promethus 통신 오류.md  EnterGame Timing Mismatch.md  Header ID 크래시.md  Unity Client 백그라운드 잔존.md  여러 클라이언트를 실행시 DB와 통신오류.md  클라이언트 렌더링 과부화.md
iocp_server_cpp/: CMakeLists.txt
iocp_server_cpp/DummyClient/: DummyClient.cpp  DummyClient.vcxproj  DummyClient.vcxproj.filters  PDL.xml  Protocol.pb.cc  Protocol.pb.h  ServerPacketHandler.cpp  ServerPacketHandler.h  ServerSession.h  SessionManager.cpp  SessionManager.h  Struct.pb.cc  pch.h
iocp_server_cpp/DummyClientCS/: ClientPerformanceStats.cs  Program.cs  PrometheusExporter.cs  SessionManager.cs  build_only_client.bat
iocp_server_cpp/GameServer/: ClientPacketHandler.cpp  ClientPacketHandler.h  DBConnectionPool.h  GameDB.xml  GameServer.cpp  GameServer.vcxproj  GameServer.vcxproj.filters  GameSession.cpp  GameSession.h  Genprocedures.h  LockFreeStack.cpp  LockFreeStack.h  LoginJob.cpp  LoginService.cpp  LoginService.h  PerformanceStats.h  Player.h  PrometheusMetrics.h  Protocol.pb.cc  Protocol.pb.h  RefCounting.h  RegisterService.cpp  RegisterService.h  Room.cpp  Room.h  StringConvert.h  Struct.pb.h  pch.h  server_stats.json
iocp_server_cpp/LoadTest/: README.md  cleanup_client_stats.bat
iocp_server_cpp/PerformanceTest/: CMakeLists.txt  PerformanceTest.cpp  PerformanceTest.h  README.md  README_RealNetworkTest.md  RealNetworkPerformanceTest.cpp  build_and_test_real_network.bat  build_performance_test.bat  network_test.bat  performance_summary.json  real_network_performance_report.csv  real_network_test_results.xml  run_tests.bat
iocp_server_cpp/PerformanceTest/reports/: performance_summary.json  real_network_performance_report.csv  server_stats.json
iocp_server_cpp/PerformanceTest/scripts/: build_and_test_real_network.bat  network_test.bat
iocp_server_cpp/ProcedureGenerator/: ProcedureGenerator.pyproj
iocp_server_cpp/ServerCore/: Allocator.cpp  Allocator.h  BufferReader.cpp  BufferReader.h  BufferWriter.cpp  BufferWriter.h  ConsoleLogger.cpp  (+64 more)
unity_client_csharp/: .gitignore
(+82 files in other folders)
